Correction collapse Equipements - Version finale

--- a/src/components/Cards.module.scss
+++ b/src/components/Cards.module.scss
@@ -6,7 +6,7 @@ $border-color_1: white;
 	bottom: 70px;
 	left: 20px;
 	font-weight: 500;
-	font-size: 18px;
+	font-size: 16.5px;
 	color: $color_1;
 }
 
